[project]
name = "stock-analytics"
version = "0.1.0"
description = "DuckDB vs MySQL Performance Benchmark - Stock Market Analytics Dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "duckdb>=1.1.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "rich>=13.7.0",
    "pyarrow>=15.0.0",
]

[project.scripts]
run-benchmark = "stock_analytics.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_analytics"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
